# malloc

./: CMakeLists.txt  README.md  benchmark.c  mymalloc.bench  res.bench  result.bench  stdmalloc.bench  test.bench
doc/: .obsidian.vimrc
doc/.obsidian/: workspace.json
include/: malloc.h
malloc/: Computer memory.md
malloc/.obsidian/: workspace.json
src/: block.c  calloc.c  free.c  hash_table.c  heap.c  main.c  malloc.c  malloc.h  print.c  realloc.c
test/: all.c
tests/: test0.c  test4.c
vogsphere/: author  benchmark.c
vogsphere/src/: heap.c  log.c  malloc.h
